--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
         There are a github repository for this game: <a href="https://github.com/Andronnix/mustached-ninja">https://github.com/Andronnix/mustached-ninja</a>
         <br>
         You can find us here on github: <a href="https://github.com/blOOdmOnstEr"> Chursin Pavel (blOOdmOnstEr)</a>, <a href="https://github.com/Andronnix"> Andrey Kokorev (Andronnix)</a> 
-    </div>
-
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">mustaged-ninja</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://mustaged-ninja.p.ht/mustached-ninja/" property="cc:attributionName" rel="cc:attributionURL">Andrey Kokorev and Pavel Chursin</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br />Permissions beyond the scope of this license may be available at <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/Andronnix" rel="cc:morePermissions">https://github.com/Andronnix</a>.        
+    </div>  
   </BODY>
 </HTML>
