--- a/index.html
+++ b/index.html
@@ -1648,11 +1648,11 @@
         <li> 1 - pistol</li>
         <li> 2 - machine gun</li>
         <li> 3 - sniper riffle </li>
-        <br />
         <li> Q - previous weapon</li>
         <li> E - next weapon</li>
         <br />
         <li> M - mute </li>
+        <li> Num +/- - volume control </li>
         <li> Esc, P - pause </li>
       </ul>
 
